# dev_template

./: .gitignore  CMakeLists.txt  README.md
include/: girls.h  hello.h  hi.h
src/: girls.cpp  hello.cpp  hi.cpp  main.cpp
